# empyrean

./: .clang-format  CMakeLists.txt  TODO  build.sh  run.sh
cmake/: SourcesFiles.cmake
example/: n-body-orbit-1.yaml  two-body-orbit.yaml
include/empyrean/: handle_threads.hpp  structs.hpp
include/empyrean/engine/: body.hpp  cosmic_body.hpp  engine_state.hpp  nbody_engine.hpp  real_vector.hpp
include/empyrean/engine/cuda_functions/: calculate_forces.cuh
include/empyrean/input/: input_parser.hpp
include/empyrean/opengl/: renderer.hpp
include/empyrean/structs/: initial_state.hpp  shared_data.hpp
include/empyrean/utils/: fps_counter.hpp  structs.hpp
include/empyrean/visualizer/: base_visualizer.hpp  sdl2_visualizer.hpp
include/glad/: glad.h
include/visualizer/: base_visualizer.hpp  sdl2_visualizer.hpp
src/: glad.c  handle_threads.cpp  main.cpp
src/engine/: body.cpp  cosmic_body.cpp  nbody_engine.cpp  real_vector.cpp  serial_euler.cpp
src/engine/cuda_functions/: calculate_forces.cu
src/input/: input_parser.cpp
src/opengl/: fragment.shader  renderer.cpp  vertex.shader
src/utils/: fps_counter.cpp
src/visualizer/: sdl2_visualizer.cpp
